--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 document.addEventListener('DOMContentLoaded', async () => {
 
   /* Local files */
-  const PLAN_FILE = './plan_app_ww_clean.geojson';
-  const GPS_FILE  = './gps_ww_cleaned.geojson';
+  const PLAN_FILE = './Data/plan_app_ww_clean.geojson';
+const GPS_FILE  = './Data/gps_ww_cleaned.geojson';
 
   /* Status colour helper */
   function statusColor(status) {
@@ -215,3 +215,4 @@ document.addEventListener('DOMContentLoaded', async () => {
 </script>
 </body>
 </html>
+
