--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 document.addEventListener('DOMContentLoaded', async () => {
 
   /* Local files */
-const PLAN_FILE = './Data/plan_app_ww_clean.geojson';
-const GPS_FILE  = './Data/gps_ww_cleaned.geojson';
+const RAW_BASE = 'https://raw.githubusercontent.com/<Jobie-Wic>/county_wicklow_maps/main/Data/';
+const PLAN_FILE = RAW_BASE + 'plan_app_ww_clean.geojson';
+const GPS_FILE  = RAW_BASE + 'gps_ww_cleaned.geojson';
+
 
   /* Status colour helper */
   function statusColor(status) {
@@ -215,5 +217,6 @@ const GPS_FILE  = './Data/gps_ww_cleaned.geojson';
 </script>
 </body>
 </html>
+
 
 
